agx: Add a trivial register allocator
Signed-off-by: Alyssa Rosenzweig <alyssa@collabora.com>

--- a/src/asahi/compiler/meson.build
+++ b/src/asahi/compiler/meson.build
@@ -22,6 +22,7 @@
 libasahi_agx_files = files(
   'agx_compile.c',
   'agx_print.c',
+  'agx_register_allocate.c',
 )
 
 agx_opcodes_h = custom_target(
