agx: Generate opcode list
Signed-off-by: Alyssa Rosenzweig <alyssa@collabora.com>

--- a/src/asahi/compiler/meson.build
+++ b/src/asahi/compiler/meson.build
@@ -23,6 +23,20 @@ libasahi_agx_files = files(
   'agx_compile.c',
 )
 
+agx_opcodes_h = custom_target(
+  'agx_opcodes.h',
+  input : ['agx_opcodes.h.py'],
+  output : 'agx_opcodes.h',
+  command : [prog_python, '@INPUT@'],
+  capture : true,
+  depend_files : files('agx_opcodes.py'),
+)
+
+idep_agx_opcodes_h = declare_dependency(
+  sources : [agx_opcodes_h],
+  include_directories : include_directories('.'),
+)
+
 libasahi_compiler = static_library(
   'asahi_compiler',
   [libasahi_agx_files],
