agx: Add sysval management helper
Will be used for lowering UBO loads, among other applications.

Signed-off-by: Alyssa Rosenzweig <alyssa@collabora.com>

--- a/src/asahi/compiler/meson.build
+++ b/src/asahi/compiler/meson.build
@@ -26,6 +26,7 @@ libasahi_agx_files = files(
   'agx_print.c',
   'agx_optimizer.c',
   'agx_register_allocate.c',
+  'agx_uniforms.c',
 )
 
 agx_opcodes_h = custom_target(
